--- a/trial/styles/style.css
+++ b/trial/styles/style.css
@@ -72,7 +72,7 @@ body {
     font-weight: 400;
     color: var(--white-1);
     line-height: var(--line-height-normal);
-    background: #F3FAE1;
+    background: F3FAE1;
     overflow-x: hidden;
 }
 
