--- a/trial/styles/style.css
+++ b/trial/styles/style.css
@@ -72,7 +72,7 @@ body {
     font-weight: 400;
     /*color: var(--white-1);*/
     line-height: var(--line-height-normal);
-    background-color: #F3FAE1;
+    background-color: #fceff9;
     overflow-x: hidden;
 }
 
